@@ -54,7 +54,8 @@ Specify the number of shots. Maximum number of pictures is 10000.
 .RS 4
 Specify the delay between the shots (if number of frames is greater
 than 1). The minimum delay is based on several factors, approximately
-3 seconds\.
+3 seconds\. If auto bracketing is set there is only delay after
+bracketing groups.
 .RE
 .PP
 \fB\-f\fR, \fB\-\-auto_focus\fR
