@@ -1,6 +1,7 @@
 version 0.77.03
 	--select_af_point
 	Store extended iso range for camera models
+	commandline: Delay only after bracketing groups if auto bracketing is set.
 
 version 0.77.02 ( 2011-09-03 )
 	html version of man page
